2011-07-11  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/49094
	* gcc.dg/tree-ssa/pr49094.c: New test.

2011-07-11  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/49698
	* gfortran.dg/pr49698.f90: New test.

2011-07-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/49690
	* gfortran.dg/intrinsic_signal.f90: New.

2011-07-10  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/49562
	* gfortran.dg/typebound_proc_23.f90: New.

2011-07-09  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.dg/graphite/pr37485.c (dg-options): Add -floop-block
	-fno-loop-strip-mine -fno-loop-interchange -ffast-math.

2011-07-09  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/regress/regress5.C: New.

2011-07-08  Jakub Jelinek  <jakub@redhat.com>

	PR target/49621
	* gcc.target/powerpc/altivec-34.c: New test.

2011-07-07  Jason Merrill  <jason@redhat.com>

	PR c++/48157
	* g++.dg/template/template-id-4.C: New.

2011-07-07  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.target/sparc/cas64.c: New test.

2011-07-07  Jakub Jelinek  <jakub@redhat.com>

	PR c/49644
	* g++.dg/torture/pr49644.C: New test.

	PR c/49644
	* gcc.c-torture/execute/pr49644.c: New test.

	PR debug/49522
	* gcc.dg/debug/pr49522.c: New test.

	PR middle-end/49640
	* gcc.dg/gomp/pr49640.c: New test.

2011-07-06  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/49479
	* gfortran.dg/reshape_zerosize_3.f90:  New test case.

2011-07-05  Janis Johnson  <janisjo@codesourcery.com>

	* gcc.target/arm/20031108-1.c: Require thumb1 or thumb2.
	* gcc.target/arm/pr40482.c: Likewise.
	* gcc.target/arm/stack-corruption.c: Likewise.

	* gcc.target/arm/ctz.c: Don't specify -march, require thumb2.
	* gcc.target/arm/pr42879.c: Likewise.
	* gcc.target/arm/pr45701-3.c: Likewise.

	* gcc.target/arm/thumb-bitfld1.c: Don't specify -march, require thumb1.

	* gcc.target/arm/scd42-3.c: Allow -march-xscale; skip if -mcpu
	is not xscale.

	* lib/target-supports-dg.exp (dg-require-effective-target): Return